--- a/app/src/main/res/layout/item_module.xml
+++ b/app/src/main/res/layout/item_module.xml
@@ -92,7 +92,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="8dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/warning"
+            android:textColor="@color/material_red_500"
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="@+id/description"
             app:layout_constraintTop_toBottomOf="@+id/description"
