Add support for backing up and restoring module list and scope list (#63)
* Add support for backing up and restoring module list and scope list

* Reload enabled modules list after restoring

--- a/app/src/main/res/xml/prefs.xml
+++ b/app/src/main/res/xml/prefs.xml
@@ -81,4 +81,21 @@
             android:persistent="false"
             app:iconSpaceReserved="false" />
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="group_backup"
+        android:title="@string/settings_backup_and_restore"
+        app:iconSpaceReserved="false">
+        <Preference
+            android:key="backup"
+            android:title="@string/settings_backup"
+            app:iconSpaceReserved="false" />
+        <Preference
+            android:key="restore"
+            android:title="@string/settings_restore"
+            app:iconSpaceReserved="false" />
+        <Preference
+            android:summary="@string/settings_backup_and_restore_summery"
+            app:iconSpaceReserved="false" />
+    </PreferenceCategory>
 </PreferenceScreen>
