Add support for backup and restore single module scope (#72)
* Add support for backup and restore single module scope

* Remove unused codes

--- a/app/src/main/res/menu/menu_app_list.xml
+++ b/app/src/main/res/menu/menu_app_list.xml
@@ -75,4 +75,17 @@
             </group>
         </menu>
     </item>
+
+    <item
+        android:title="@string/menu_backup_and_restore"
+        app:showAsAction="never">
+        <menu>
+            <item
+                android:id="@+id/backup"
+                android:title="@string/menu_backup" />
+            <item
+                android:id="@+id/restore"
+                android:title="@string/menu_restore" />
+        </menu>
+    </item>
 </menu>
