[app] Show snackbar for compiling result (#96)

--- a/app/src/main/res/layout/fragment_compile_dialog.xml
+++ b/app/src/main/res/layout/fragment_compile_dialog.xml
@@ -21,5 +21,6 @@
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical" />
+        android:layout_gravity="center_vertical"
+        android:text="@string/compile_speed_msg" />
 </LinearLayout>
