[app] Fix tab background

--- a/app/src/main/res/layout/activity_module_detail.xml
+++ b/app/src/main/res/layout/activity_module_detail.xml
@@ -40,7 +40,8 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="?colorActionBar">
 
         </com.google.android.material.tabs.TabLayout>
 
