[app] Fix tablyaout style

--- a/app/src/main/res/layout/activity_module_detail.xml
+++ b/app/src/main/res/layout/activity_module_detail.xml
@@ -41,7 +41,8 @@
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?colorActionBar">
+            android:background="?colorActionBar"
+            style="?tabLayoutTheme">
 
         </com.google.android.material.tabs.TabLayout>
 
