--- a/app/src/main/res/layout/item_repo_release.xml
+++ b/app/src/main/res/layout/item_repo_release.xml
@@ -50,7 +50,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             tools:text="@tools:sample/lorem" />
 
-        <TextView
+        <io.github.lsposed.manager.ui.widget.LinkifyTextView
             android:id="@+id/description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
