[app] Fix clipped button shadow

--- a/app/src/main/res/layout/item_repo_release.xml
+++ b/app/src/main/res/layout/item_repo_release.xml
@@ -29,7 +29,9 @@
     android:minHeight="?attr/listPreferredItemHeight"
     android:paddingVertical="16dp"
     android:paddingStart="16dp"
-    android:paddingEnd="24dp">
+    android:paddingEnd="24dp"
+    android:clipToPadding="false"
+    android:clipChildren="false">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/item_root"
