--- a/app/src/main/res/layout/item_repo_release.xml
+++ b/app/src/main/res/layout/item_repo_release.xml
@@ -69,6 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/module_release_view_assets"
+            android:layout_marginTop="4dp"
             app:icon="@drawable/ic_attach_file"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@id/description"
@@ -80,6 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
+            android:layout_marginTop="4dp"
             app:icon="@drawable/ic_open_in_browser"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view_assets"
