--- a/app/src/main/res/layout/item_repo_readme.xml
+++ b/app/src/main/res/layout/item_repo_readme.xml
@@ -18,12 +18,13 @@
   ~ Copyright (C) 2021 LSPosed Contributors
   -->
 
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
-    android:clipChildren="false">
+    android:clipChildren="false"
+    app:fitSystemWindowsInsets="bottom">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
