[app] Use some of RikkaW's libraries (#117)
* Use rikka's switchBar

* Use rikka's recyclerviewkt

* Use rikka's insets

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/snackbar"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    app:consumeSystemWindowsInsets="top|start|end"
+    app:edgeToEdge="true"
+    app:fitSystemWindowsInsets="top|start|end">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -27,6 +30,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:fitSystemWindowsInsets="bottom"
         tools:ignore="UseCompoundDrawables,ContentDescription">
 
         <LinearLayout
