[app] Disable liftOnScroll for app list (#118)

--- a/app/src/main/res/layout/activity_app_list.xml
+++ b/app/src/main/res/layout/activity_app_list.xml
@@ -9,6 +9,7 @@
     app:fitSystemWindowsInsets="top|start|end">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="?actionBarTheme"
