--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,4 @@
 <resources>
-    <dimen name="app_icon_size">48dp</dimen>\
+    <dimen name="app_icon_size">48dp</dimen>
+    <dimen name="tab_layout_height">48dp</dimen>
 </resources>
