--- a/app/src/main/res/layout/activity_app_list.xml
+++ b/app/src/main/res/layout/activity_app_list.xml
@@ -1,34 +1,58 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ This file is part of LSPosed.
+  ~
+  ~ LSPosed is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ LSPosed is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with LSPosed.  If not, see <https://www.gnu.org/licenses/>.
+  ~     
+  ~ Copyright (C) 2020 EdXposed Contributors
+  ~ Copyright (C) 2021 LSPosed Contributors
+  -->
+
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/snackbar"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:consumeSystemWindowsInsets="top|start|end"
+    app:consumeSystemWindowsInsets="start|end"
     app:edgeToEdge="true"
-    app:fitSystemWindowsInsets="top|start|end">
+    app:fitSystemWindowsInsets="start|end">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <rikka.material.widget.AppBarLayout
         android:id="@+id/app_bar"
+        style="?appBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="?actionBarTheme"
-        android:elevation="4dp">
+        android:fitsSystemWindows="true">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?colorActionBar"
+            app:subtitleTextAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Subtitle"
+            app:titleTextAppearance="@android:style/TextAppearance.Material.Widget.Toolbar.Title"
             app:popupTheme="?actionBarPopupTheme" />
 
-    </com.google.android.material.appbar.AppBarLayout>
+    </rikka.material.widget.AppBarLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="?actionBarSize"
+        app:fitSystemWindowsInsets="top"
+        tools:ignore="MissingPrefix">
 
         <rikka.widget.switchbar.SwitchBar
             android:id="@+id/master_switch"
@@ -37,19 +61,14 @@
             app:switchOnText="@string/enable_module"
             app:switchOffText="@string/enable_module" />
 
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/swipeRefreshLayout"
+        <rikka.widget.borderview.BorderRecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clipToPadding="false"
-                app:fitSystemWindowsInsets="bottom" />
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            android:clipToPadding="false"
+            app:borderTopVisibility="whenTop"
+            app:borderTopDrawable="@null"
+            app:borderBottomVisibility="never"
+            app:fitSystemWindowsInsets="bottom" />
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
