--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,6 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorActionBar">@color/colorActionBar</item>
-        <item name="actionBarTheme">@style/ThemeOverlay.MaterialComponents.ActionBar</item>
         <item name="android:colorBackground">@color/colorBackground</item>
         <item name="android:windowBackground">@color/colorBackground</item>
         <item name="listItemBackground">?selectableItemBackground</item>
@@ -25,6 +24,38 @@
         <item name="switchBarTheme">@style/ThemeOverlay.SwitchBar</item>
         <item name="switchBarBackgroundNormal">@color/switchbar_background_light</item>
         <item name="switchBarBackgroundDisabled">@color/switchbar_background_light</item>
+        <item name="actionBarStyle">@style/Widget.Material.ActionBar.Surface</item>
+        <item name="actionBarTheme">@style/ThemeOverlay.ActionBar</item>
+        <item name="toolbarStyle">@style/Widget.Material.Toolbar</item>
+        <item name="appBarStyle">@style/Widget.AppBar.Surface.Raisable</item>
+    </style>
+
+    <style name="Widget.AppBar" parent="">
+        <item name="android:background">?toolbarColor</item>
+        <item name="android:theme">?actionBarTheme</item>
+        <item name="android:stateListAnimator">@animator/raise_animator</item>
+        <item name="android:elevation">2dp</item>
+    </style>
+
+    <style name="Widget.Material.Toolbar" parent="Widget.MaterialComponents.Toolbar">
+        <item name="android:background">?android:colorBackground</item>
+    </style>
+
+    <style name="Widget.AppBar.Surface">
+        <item name="android:background">?android:colorBackground</item>
+        <item name="android:stateListAnimator">@animator/alpha_animator</item>
+        <item name="android:elevation">@dimen/app_bar_elevation</item>
+    </style>
+
+    <style name="Widget.AppBar.Surface.Raisable">
+        <item name="android:elevation">0dp</item>
+        <item name="android:stateListAnimator">@animator/raise_animator</item>
+    </style>
+
+    <style name="ThemeOverlay.ActionBar" parent="ThemeOverlay.MaterialComponents.ActionBar">
+        <item name="elevation">0dp</item>
+        <item name="titleTextAppearance">@android:style/TextAppearance.Material.Widget.Toolbar.Title</item>
+        <item name="subtitleTextAppearance">@android:style/TextAppearance.Material.Widget.Toolbar.Subtitle</item>
     </style>
 
     <style name="Widget.App.Button.OutlinedButton.IconOnly" parent="Widget.MaterialComponents.Button.OutlinedButton">
